updating my stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "Jolla",
         "markdownify",
         "mdate",
+        "mycool",
         "myfetch",
         "rawposts",
         "Relaxkr",
